# sgl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sgl-lib.pro  sgl-project.pro
doc/: doxygen.ini
doc/html/: annotated.html  classGArc-members.html  classGArc.html  classGBrowserPane-members.html  classGBrowserPane.html  classGButton-members.html  classGButton.html  classGCanvas-members.html  classGCanvas.html  classGCheckBox-members.html  classGCheckBox.html  classGChooser-members.html  classGChooser.html  classGClipboard-members.html  classGClipboard.html  classGColor-members.html  classGColor.html  classGColorChooser-members.html  classGColorChooser.html  classGCompound-members.html  classGCompound.html  classGContainer-members.html  classGContainer.html  classGDownloader-members.html  classGDownloader.html  classGDrawingSurface-members.html  classGDrawingSurface.html  classGEvent-members.html  classGEvent.html  classGFileChooser-members.html  classGFileChooser.html  classGFont-members.html  classGFont.html  classGFontChooser-members.html  classGFontChooser.html  classGImage-members.html  classGImage.html  classGInteractor-members.html  classGInteractor.html  classGLabel-members.html  (+326 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enums_7.js  enums_8.js  enums_9.js  (+71 more)
doc/latex/: annotated.tex  classGArc.tex  classGBrowserPane.tex  classGButton.tex  classGCanvas.tex  classGCheckBox.tex  classGChooser.tex  classGClipboard.tex  classGColor.tex  classGCompound.tex  classGContainer.tex  classGDrawingSurface.tex  classGEvent.tex  classGFileChooser.tex  classGFont.tex  classGFontChooser.tex  classGImage.tex  classGInteractor.tex  classGLabel.tex  classGLine.tex  classGObject.tex  classGObservable.tex  classGOptionPane.tex  classGOval.tex  classGPolygon.tex  classGRadioButton.tex  classGRect.tex  classGRoundRect.tex  classGScrollBar.tex  classGScrollPane.tex  classGSlider.tex  classGSound.tex  classGSpacer.tex  classGTable.tex  classGText.tex  classGTextArea.tex  classGTextField.tex  classGThread.tex  classGTimer.tex  classGWindow.tex  (+77 more)
legacy/: images.qrc  personaltypes.py
legacy/resources/: generated.qrc
lib/: build.h.in  console.cpp  console.h  consolestreambuf.h  consoletext.h  echoinputstreambuf.h  forwardingstreambuf.h  gbrowserpane.cpp  gbrowserpane.h  gbutton.cpp  gbutton.h  gcanvas.cpp  gcanvas.h  gcheckbox.cpp  gcheckbox.h  gchooser.cpp  gchooser.h  gclipboard.cpp  gclipboard.h  gcolor.cpp  gcolor.h  gcolorchooser.cpp  gcolorchooser.h  gconsolewindow.cpp  gconsolewindow.h  gcontainer.cpp  gcontainer.h  gdiffgui.cpp  gdiffgui.h  gdiffimage.cpp  gdiffimage.h  gdownloader.cpp  gdownloader.h  gdrawingsurface.cpp  gdrawingsurface.h  gevent.cpp  gevent.h  geventqueue.cpp  geventqueue.h  gexceptions.cpp  (+68 more)
scripts/: make-docs.sh  make-project.sh
src/: welcome.cpp
src/test/: test-2dgraphics.cpp  test-console.cpp  test-diffimage.cpp  test-layout.cpp  test-table.cpp  test-widgets.cpp
